; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_pset.c_filt_machporttouch.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_pset.c_filt_machporttouch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.knote = type { i32, i32*, %struct.TYPE_7__ }
%struct.TYPE_7__ = type { %struct.TYPE_8__* }
%struct.TYPE_8__ = type { i32 }
%struct.kevent_internal_s = type { i32, i32, i32* }

@EV_ENABLE = common dso_local global i32 0, align 4
@IKM_NULL = common dso_local global i32 0, align 4
@FILTER_ACTIVE = common dso_local global i32 0, align 4
@MACH_RCV_MSG = common dso_local global i32 0, align 4
@FILTER_RESET_EVENT_QOS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.knote*, %struct.kevent_internal_s*)* @filt_machporttouch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @filt_machporttouch(%struct.knote* %0, %struct.kevent_internal_s* %1) #0 {
  %3 = alloca %struct.knote*, align 8
  %4 = alloca %struct.kevent_internal_s*, align 8
  %5 = alloca %struct.TYPE_8__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.knote* %0, %struct.knote** %3, align 8
  store %struct.kevent_internal_s* %1, %struct.kevent_internal_s** %4, align 8
  %8 = load %struct.knote*, %struct.knote** %3, align 8
  %9 = getelementptr inbounds %struct.knote, %struct.knote* %8, i32 0, i32 2
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 0
  %11 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  store %struct.TYPE_8__* %11, %struct.TYPE_8__** %5, align 8
  store i32 0, i32* %7, align 4
  %12 = load %struct.kevent_internal_s*, %struct.kevent_internal_s** %4, align 8
  %13 = getelementptr inbounds %struct.kevent_internal_s, %struct.kevent_internal_s* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = load %struct.knote*, %struct.knote** %3, align 8
  %16 = getelementptr inbounds %struct.knote, %struct.knote* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 8
  %17 = load %struct.kevent_internal_s*, %struct.kevent_internal_s** %4, align 8
  %18 = getelementptr inbounds %struct.kevent_internal_s, %struct.kevent_internal_s* %17, i32 0, i32 2
  %19 = load i32*, i32** %18, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 0
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.knote*, %struct.knote** %3, align 8
  %23 = getelementptr inbounds %struct.knote, %struct.knote* %22, i32 0, i32 1
  %24 = load i32*, i32** %23, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 0
  store i32 %21, i32* %25, align 4
  %26 = load %struct.kevent_internal_s*, %struct.kevent_internal_s** %4, align 8
  %27 = getelementptr inbounds %struct.kevent_internal_s, %struct.kevent_internal_s* %26, i32 0, i32 2
  %28 = load i32*, i32** %27, align 8
  %29 = getelementptr inbounds i32, i32* %28, i64 1
  %30 = load i32, i32* %29, align 4
  %31 = load %struct.knote*, %struct.knote** %3, align 8
  %32 = getelementptr inbounds %struct.knote, %struct.knote* %31, i32 0, i32 1
  %33 = load i32*, i32** %32, align 8
  %34 = getelementptr inbounds i32, i32* %33, i64 1
  store i32 %30, i32* %34, align 4
  %35 = load %struct.kevent_internal_s*, %struct.kevent_internal_s** %4, align 8
  %36 = getelementptr inbounds %struct.kevent_internal_s, %struct.kevent_internal_s* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  %38 = load i32, i32* @EV_ENABLE, align 4
  %39 = and i32 %37, %38
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %44

41:                                               ; preds = %2
  %42 = load %struct.knote*, %struct.knote** %3, align 8
  %43 = call i32 @filt_machport_turnstile_complete(%struct.knote* %42)
  br label %44

44:                                               ; preds = %41, %2
  %45 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %46 = call i32 @imq_lock(%struct.TYPE_8__* %45)
  %47 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %48 = call i64 @imq_is_valid(%struct.TYPE_8__* %47)
  %49 = icmp ne i64 %48, 0
  br i1 %49, label %50, label %66

50:                                               ; preds = %44
  %51 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %52 = call i32 @imq_is_set(%struct.TYPE_8__* %51)
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %66, label %54

54:                                               ; preds = %50
  %55 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %56 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %55, i32 0, i32 0
  %57 = call i32 @ipc_kmsg_queue_first(i32* %56)
  store i32 %57, i32* %6, align 4
  %58 = load i32, i32* @IKM_NULL, align 4
  %59 = icmp ne i32 %57, %58
  br i1 %59, label %60, label %66

60:                                               ; preds = %54
  %61 = load i32, i32* @FILTER_ACTIVE, align 4
  %62 = load %struct.knote*, %struct.knote** %3, align 8
  %63 = load i32, i32* %6, align 4
  %64 = call i32 @filt_machport_adjust_qos(%struct.knote* %62, i32 %63)
  %65 = or i32 %61, %64
  store i32 %65, i32* %7, align 4
  br label %76

66:                                               ; preds = %54, %50, %44
  %67 = load %struct.knote*, %struct.knote** %3, align 8
  %68 = getelementptr inbounds %struct.knote, %struct.knote* %67, i32 0, i32 0
  %69 = load i32, i32* %68, align 8
  %70 = load i32, i32* @MACH_RCV_MSG, align 4
  %71 = and i32 %69, %70
  %72 = icmp ne i32 %71, 0
  br i1 %72, label %73, label %75

73:                                               ; preds = %66
  %74 = load i32, i32* @FILTER_RESET_EVENT_QOS, align 4
  store i32 %74, i32* %7, align 4
  br label %75

75:                                               ; preds = %73, %66
  br label %76

76:                                               ; preds = %75, %60
  %77 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %78 = call i32 @imq_unlock(%struct.TYPE_8__* %77)
  %79 = load i32, i32* %7, align 4
  ret i32 %79
}

declare dso_local i32 @filt_machport_turnstile_complete(%struct.knote*) #1

declare dso_local i32 @imq_lock(%struct.TYPE_8__*) #1

declare dso_local i64 @imq_is_valid(%struct.TYPE_8__*) #1

declare dso_local i32 @imq_is_set(%struct.TYPE_8__*) #1

declare dso_local i32 @ipc_kmsg_queue_first(i32*) #1

declare dso_local i32 @filt_machport_adjust_qos(%struct.knote*, i32) #1

declare dso_local i32 @imq_unlock(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
